# decomp

./: .gitignore  .mcp.json  CLAUDE.md  README.md  TRAINING_PLAN.md  main.py  pyproject.toml
.claude/: settings.json
.claude/commands/: decompile-f3dex2.md  decompile.md  merge-fragments.md  new-project.md  refine-splat.md  setup-objdiff.md
decomp/: bootstrap.py  episode.py  main.py
decomp/agent/: __init__.py  loop.py  tools.py
decomp/core/: __init__.py  config.py  function.py  project.py
decomp/logging/: __init__.py  cli.py  episode.py
decomp/training/: __init__.py  exporter.py
docs/: IDO_CODEGEN.md  MATCHING_WORKFLOW.md  N64_FORENSICS.md  PATTERNS.md  POST_CC_RECIPES.md  README.md  TOOLING_DECOMP.md  TOOLING_GIT.md
episodes/: func_00000A94.json  func_00002080.json  func_000020A4.json  func_0000214C.json  func_000031B8.json  func_00008A38.json  func_0000DDC4.json  func_0000E5E8.json  func_80001494.json  func_800017B4.json  func_800018A8.json  func_800029A0.json  gui_func_000014B4.json  gui_func_000014EC.json  h2hproc_uso_func_000003AC.json  h2hproc_uso_func_00000404.json  timproc_uso_b3_func_000021F4.json
scripts/: decomp-preflight.sh  decomp-search  export_episodes.py  log_exact_episode.py  progress.sh  spin-up-agent.sh  validate_episode_schema.py
scripts/agent-setups/: 1080.sh
